--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "jest": "^29.5.0"
